# shellclave

./: CMakeLists.txt  LICENSE  README.md  shellclave.c  shellclave.h  shellclave_cli.c  shellclave_cli.h  shellclave_config.h  shellclave_config.h.in  shellclave_lib.c  shellclave_lib.h  shellclave_ptrace_linux.c  shellclave_ptrace_linux.h  shellclave_utils.c  slave_example.c  style_src.sh
